--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
             "dev-master": "1.9.0-dev"
         },	    
         "flarum-extension": {
-            "title": "Flaneo ~ Brazilian Portuguese",
+            "title": "Brazilian Portuguese",
             "icon": {
                 "image": "icon.jpg",
                 "backgroundColor": "#414972",
