--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         },
         "flarum-locale": {
             "code": "pt-BR",
-            "title": "Português do Brasil"
+            "title": "Português Brasileiro"
         }
     }
 }
