--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.9.0-dev"
+            "dev-master": "0.1.x-dev"
         },	    
         "flarum-extension": {
             "title": "Brazilian Portuguese",
