--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "tiu-ram0n/brazilian-portuguese",
     "type": "flarum-extension",
     "description": "Pacote de idioma Português do Brasil.",
-    "homepage": "https://coode.in",	
+    "homepage": "https://ramonguilherme.com.br",	
     "keywords": [
 			"brazilian",
 			"portuguese",
