--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
 	    "source": "https://github.com/ram0ng1/brazilian-portuguese"
     },	
     "require": {
-        "flarum/core": "^0.1.0-beta.16"
+        "flarum/core": "^1.0.0"
     },
     "extra": {
         "flarum-extension": {
